Salesforce/force-app/main/default/objects/Licence_Type_Class_Grade__c/Licence_Type_Class_Grade__c.object-meta.xml
<CustomObject>
    <description>This is a junction between licence type (as a picklist) and licence-class-grade.
This object is intended to be the one place in Salesforce where licence type-class-grades need to be synced from BUILD.  The structure of this object is directly based on the data in the BUILD LicenceTypeClassGrade table.</description>
    <label>Licence Type-Class-Grade</label>
    <nameField>
        <displayFormat>LTCG-{0}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Licence Type-Class-Grades</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>