Salesforce/force-app/main/default/objects/Licence_Type_Class_Grade__c/fields/Display_on_FPLFT__c.field-meta.xml
<CustomField>
    <fullName>Display_on_FPLFT__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Display on the Fire Protection Licensing Framework Tool (OLA-416).</description>
    <inlineHelpText>Display on the Fire Protection Licensing Framework Tool (OLA-416).</inlineHelpText>
    <label>Display on Fire Protection Tool</label>
    <type>Checkbox</type>
</CustomField>