Salesforce/force-app/main/default/objects/Licence_Type_Class_Grade__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <description>Is this type-class-grade combination active?</description>
    <formula>Licence_Class_Grade__r.Is_Active__c</formula>
    <inlineHelpText>Is this type-class-grade combination active?</inlineHelpText>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>