Salesforce/force-app/main/default/objects/Licence_Type_Class_Grade__c/fields/Licence_Class_Description__c.field-meta.xml
<CustomField>
    <fullName>Licence_Class_Description__c</fullName>
    <description>The licence class description.</description>
    <formula>Licence_Class_Grade__r.Licence_Class__r.Description__c</formula>
    <inlineHelpText>The licence class description.</inlineHelpText>
    <label>Licence Class Description</label>
    <type>Text</type>
</CustomField>