Salesforce/force-app/main/default/objects/Licence_Type_Class_Grade__c/fields/Licence_Class_Grade__c.field-meta.xml
<CustomField>
    <fullName>Licence_Class_Grade__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The licence class-grade to which the selected type applies.</description>
    <inlineHelpText>The licence class-grade to which the selected type applies.</inlineHelpText>
    <label>Licence Class-Grade</label>
    <referenceTo>Licence_Class_Grade__c</referenceTo>
    <relationshipLabel>Licence Type-Class-Grades</relationshipLabel>
    <relationshipName>Licence_Type_Class_Grades</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>