Salesforce/force-app/main/default/objects/Licence_Type_Class_Grade__c/fields/Licence_Type__c.field-meta.xml
<CustomField>
    <fullName>Licence_Type__c</fullName>
    <description>The licence type for this type-class-grade combination.</description>
    <inlineHelpText>The licence type for this type-class-grade combination.</inlineHelpText>
    <label>Licence Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>I</fullName>
                    <label>Individual</label>
                </value>
                <value>
                    <fullName>AI</fullName>
                    <label>Accreditation - Individual</label>
                </value>
                <value>
                    <fullName>C</fullName>
                    <label>Company</label>
                </value>
                <value>
                    <fullName>NC</fullName>
                    <label>Authorised Nominating Authority - C</label>
                </value>
                <value>
                    <fullName>NO</fullName>
                    <label>Authorised Nominating Authority - O</label>
                </value>
                <value>
                    <fullName>JI</fullName>
                    <label>Adjudicator</label>
                </value>
                <value>
                    <fullName>NI</fullName>
                    <label>Authorised Nominating Authority - I</label>
                </value>
                <value>
                    <fullName>O</fullName>
                    <label>Organisation</label>
                </value>
                <value>
                    <fullName>PI</fullName>
                    <label>Owner Builder Permit - I</label>
                </value>
                <value>
                    <fullName>PC</fullName>
                    <label>Owner Builder Permit - C</label>
                </value>
                <value>
                    <fullName>PO</fullName>
                    <label>Owner Builder Permit - O</label>
                </value>
                <value>
                    <fullName>PP</fullName>
                    <label>Owner Builder Permit - P</label>
                </value>
                <value>
                    <fullName>PS-I</fullName>
                    <label>Pool Safety - Individual</label>
                </value>
                <value>
                    <fullName>PD</fullName>
                    <label>Plumber / Drainer</label>
                </value>
                <value>
                    <fullName>PPD</fullName>
                    <label>Provisional Plumber / Drainer</label>
                </value>
                <value>
                    <fullName>BP</fullName>
                    <label>Backflow Prevention</label>
                </value>
            </valueSetDefinition>
        </valueSet>
</CustomField>