Salesforce/force-app/main/default/objects/Licence_Type_Class_Grade__c/fields/Qualification_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Qualification_Requirements__c</fullName>
    <description>The qualification requirements to display on the Fire Protection Licensing Framework Tool (FTLFT - OLA-416).</description>
    <inlineHelpText>The qualification requirements to display on the Fire Protection Licensing Framework Tool.</inlineHelpText>
    <label>Qualification Requirements Text</label>
    <length>3000</length>
    <type>Html</type>
</CustomField>