Salesforce/force-app/main/default/objects/Licence_Type_Class_Grade__c/fields/Type_Class_Grade_Code__c.field-meta.xml
<CustomField>
    <fullName>Type_Class_Grade_Code__c</fullName>
    <externalId>true</externalId>
    <label>Type Class Grade Code</label>
    <length>120</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>