Salesforce/force-app/main/default/objects/Licence_Type_Class_Grade__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Type_Class_Grade_Code__c</columns>
    <columns>Licence_Class_Description__c</columns>
    <columns>Is_Active__c</columns>
    <columns>Display_on_FPLFT__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>